--- a/src/CSS/Letter.css
+++ b/src/CSS/Letter.css
@@ -1,4 +1,4 @@
-animated letter for information footer
+/* animated letter for information footer */
 *, *:before, *:after{
   box-sizing:border-box;
 }
@@ -8,6 +8,7 @@ div.foo{
   margin: 0 auto;
   text-align: center;
 }
+
 .letter{
   display: inline-block;
   font-weight: 900;
@@ -19,6 +20,7 @@ div.foo{
   perspective: 400;
   z-index: 1;
 }
+
 .letter:before, .letter:after{
   position:absolute;
   content: attr(data-letter);
@@ -26,9 +28,11 @@ div.foo{
   top:0;
   left:0;
 }
+
 .letter, .letter:before, .letter:after{
   transition: all 0.3s ease-in-out;
 }
+
 .letter:before{
   color: rgb(255, 255, 255);
   text-shadow: 
@@ -40,6 +44,7 @@ div.foo{
     rotateY(-15deg)
     rotateZ(0deg);
 }
+
 .letter:after{
   color: rgba(0,0,0,.11);
   z-index:2;
@@ -50,6 +55,7 @@ div.foo{
     rotateZ(0deg)
     skew(0deg,1deg);
 }
+
 .letter:hover:before{
   color: #fafafa;
   transform:
@@ -57,6 +63,7 @@ div.foo{
     rotateY(-40deg)
     rotateZ(0deg);
 }
+
 .letter:hover:after{
   transform:
     scale(1.08,1)
