--- a/src/CSS/Media_iPhone5.css
+++ b/src/CSS/Media_iPhone5.css
@@ -1,7 +1,8 @@
 /* iphone 5 */
 @media only screen 
 and (min-device-width : 300px) 
-and (max-device-width : 568px) { 
+and (max-device-width : 568px)
+and (-webkit-min-device-pixel-ratio: 2) { 
   .row {width: 100%;}
 
   /* site heading and alert */
@@ -20,16 +21,16 @@ and (max-device-width : 568px) {
     margin-left: -4%;
   }
 
-  #modal_0 > .modal-content > h5 {
+  #modal_5 > .modal-content > h5 {
+    font-size: 14px !important;
+  }
+
+  #modal_5 > .modal-content > h4 {
+    font-size: 14px !important;
+  }
+
+  #modal_5 > .modal-content > h3 {
     font-size: 18px !important;
-  }
-
-  #modal_0 > .modal-content > h4 {
-    font-size: 16px !important;
-  }
-
-  #modal_0 > .modal-content > h3 {
-    font-size: 16px !important;
   }
 
   #modal_0 > .modal-content > a {
