--- a/src/CSS/Admin.css
+++ b/src/CSS/Admin.css
@@ -1,5 +1,9 @@
 .adminPage {text-align: center;}
 
+.signInAdmin {
+  margin-left: 10%;
+}
+
 .adminStats {
   display: flex;
   justify-content: space-around;
